--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,24 +16,24 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.hero.WelcomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.register.RegisterActivity"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".ui.hero.HeroActivity"-->
-<!--            android:exported="false" />-->
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.home.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.VLOC">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.VLOC">
         </activity>
     </application>
 
