--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".setting.VlocApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,14 +16,22 @@
         android:theme="@style/Theme.VLOC"
         tools:targetApi="31">
         <activity
-            android:name=".ui.hero.WelcomeActivity"
+            android:name=".setting.SettingsActivity"
+            android:label="@string/setting"
+            android:parentActivityName=".ui.home.MainActivity" />
+        <activity
+            android:name=".ui.hero.SplashActivity"
             android:exported="true"
-            android:theme="@style/Theme.VLOC">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.hero.WelcomeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.VLOC">
         </activity>
         <activity
             android:name=".ui.register.RegisterActivity"
